refactor: 엔티티 CreationTimestamp 어노테이션 교체 및 toList() 통일